-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 4.12.0-beta2
When opening the AndroidManifest.xml file in Creator, it will add the tag:
android:icon="@drawable/icon"
to the application section even with no icon selected, and that will cause a build error because the icon files are not actually present in the res folder.
| For Gerrit Dashboard: QTCREATORBUG-23747 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 294802,6 | Android: fix a thinko in syncing icons to widgets | 4.12 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |