Android: fix a thinko in syncing icons to widgets

The path can't be set unconditionally, and copyIcon
sets the path when necessary. So call copyIcon here.

Task-number: QTCREATORBUG-23747
Change-Id: I72a61798ad54c94a5c2a30bb313eb234f51d5ff3
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
Reviewed-by: BogDan Vatra <bogdan@kdab.com>